# libcomp

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  standalone.cmake
.github/workflows/: ci.yml
ci/: clang-format.sh  global.sh  linux-before_install.sh  linux-build.sh  linux-libcomp.sh  linux-warmcache.sh  windows-build.ps1  windows-libcomp.sh  windows-warmcache.sh
ci/checksums/: external-linux-clang.tar.bz2.sha1  external-linux-gcc.tar.bz2.sha1  external-win32-msvc2017.zip.sha1  external-win64-msvc2017.zip.sha1
cmake/: binaries.cmake  external.cmake
libcomp/: CMakeLists.txt
libcomp/doc/: Doxyfile.in  MainPage.dox
libcomp/schema/: account.xml  accountlogin.xml  action_grantskills.xml  action_playbgm.xml  action_playsoundeffect.xml  action_startevent.xml  action_updateflag.xml  action_updatepoints.xml  character.xml  clan.xml  demon.xml  enemy.xml  event.xml  event_openmenu.xml  event_playscene.xml  fusion.xml  item.xml  libcomp-master.xml  qmp_file.xml  server_npc.xml  server_object.xml  server_zone.xml  serverconfig.xml  spawn.xml  tokusei.xml
libcomp/schema/binarydata/: actionlogicdata.xml  autolivedata.xml  bazaarclerknpcdata.xml  blenddata.xml  cblocknamedata.xml  cchanceitemdata.xml  cculturedata.xml  cdevilbookbonusdata.xml  cdevilbookbonusmitamadata.xml  cdevilboosticondata.xml  cdevildungeondata.xml  cdevilequipmentexclusivedata.xml  cequipmodeldata.xml  ceventdata.xml  ceventmessagedata.xml  cfortunedata.xml  cguardianassistdata.xml  cguidedata.xml  chanceitemdata.xml  chelpdata.xml  chouraidata.xml  cicondata.xml  citemdata.xml  ckeyitemdata.xml  cloadingcommercialdata.xml  cmapdata.xml  cmessagedata.xml  cmodeldata.xml  cmodifiedeffectdata.xml  cmultitalkdata.xml  cnakamaquestrewarddata.xml  codenamedata.xml  cpolygonmoviedata.xml  cquest.xml  cskilldata.xml  csounddata.xml  cspecialskilleffectdata.xml  cstatusdata.xml  csynthesiscatalystdata.xml  ctalkmessagedata.xml  (+55 more)
libcomp/src/: ArgumentParser.cpp  ArgumentParser.h  BaseConfig.cpp  BaseConfig.h  BaseConstants.h.in  BaseLog.cpp  BaseLog.h  BaseScriptEngine.cpp  BaseScriptEngine.h  BaseServer.cpp  BaseServer.h  BinaryDataSet.cpp  BinaryDataSet.h  CString.cpp  CString.h  ChannelConnection.cpp  ChannelConnection.h  Child.cpp  Child.h  Compress.cpp  Compress.h  Config.cpp  Config.h  ConnectionMessage.h  Constants.h.in  Convert.cpp  Convert.h  CryptSupport.h  Crypto.cpp  Crypto.h  DataFile.cpp  DataFile.h  DataStore.cpp  DataStore.h  DataSyncManager.cpp  DataSyncManager.h  Database.cpp  Database.h  DatabaseBind.cpp  DatabaseBind.h  (+149 more)
libcomp/tests/: Convert.cpp  Crypto.cpp  Database.cpp  DiffieHellman.cpp  GeneratedObjects.cpp  MariaDB.cpp  Packet.cpp  ScriptEngine.cpp  String.cpp  VectorStream.cpp
libobjgen/: CMakeLists.txt
libobjgen/res/: VariableAccessScriptBindings.cpp  VariableListLoadRaw.cpp  VariableListSaveRaw.cpp  VariablePersistentFunctions.cpp  VariableStringSaveDynamicRound.cpp  VariableStringToEncoding.cpp  VariableStringXmlLoad.cpp
libobjgen/src/: Generator.cpp  Generator.h  GeneratorFactory.cpp  GeneratorFactory.h  GeneratorHeader.cpp  GeneratorHeader.h  GeneratorSource.cpp  GeneratorSource.h  GeneratorXmlSchema.cpp  GeneratorXmlSchema.h  MetaObject.cpp  MetaObject.h  MetaObjectXmlParser.cpp  MetaObjectXmlParser.h  MetaVariable.cpp  MetaVariable.h  MetaVariableArray.cpp  MetaVariableArray.h  MetaVariableBool.cpp  MetaVariableBool.h  MetaVariableEnum.cpp  MetaVariableEnum.h  MetaVariableInt.cpp  MetaVariableInt.h  MetaVariableList.cpp  MetaVariableList.h  MetaVariableMap.cpp  MetaVariableMap.h  MetaVariableReference.cpp  MetaVariableReference.h  MetaVariableSet.cpp  MetaVariableSet.h  MetaVariableString.cpp  MetaVariableString.h  UUID.cpp  UUID.h
libobjgen/tests/: MetaObject.cpp  MetaVariable.cpp  UUID.cpp
tools/: CMakeLists.txt
tools/objgen/: CMakeLists.txt
tools/objgen/src/: main.cpp
